# osmnx-aqi-routes

./: .gitignore  README.md  main.py  pyproject.toml
docs/: report.tex
routes/: analytics_routes.py
services/: _data-downloader.py  _open_aq.py  graph_service.py  model.py  pm25_model.joblib  routing_service.py
static/css/: analytics.css  style.css
static/js/: chart_handler.js  index.js
templates/: analytics.html  base.html  index.html
