[project]
name = "osmnx-aqi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "contextily>=1.7.0",
    "fastapi[standard]>=0.135.1",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "mapclassify>=2.10.0",
    "osmnx[all]>=2.1.0",
    "python-dotenv>=1.2.2",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "awscli>=1.44.64",
    "xgboost>=3.2.0",
]
